merge users and customers